# adapteddlo_muj

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  setup.py
adapteddlo_muj/: __init__.py
adapteddlo_muj/assets/: anchorbox.xml  blast2.xml  dlorope1dkin.xml  eef_body3.xml  gen_misclr.py  nativerope1dkin.xml  overall.xml  overall_native.xml  overall_plain.xml  weldweight.xml  world_fqs.xml  world_realexp.xml  world_rnrvalid.xml  world_ssing.xml  world_test_fast.xml
adapteddlo_muj/controllers/: pseudo_ropekin_controller_both_ro.py  ropekin_controller_adapt.py  ropekin_controller_bal.py  ropekin_controller_geds.py  ropekin_controller_massspring.py  ropekin_controller_xfrc.py  ropekin_controller_xpbd.py
adapteddlo_muj/data/: pts_all.pickle
adapteddlo_muj/envs/: __init__.py  fqs_env.py  mix_testenv.py  native_cable_valid_test.py  native_testenv.py  our_rope_valid_test.py  our_testenv.py  our_xfrc_rope_valid_test.py  our_xfrc_testenv.py  plain_rope_valid_test.py  realgrav_valid_test.py  rnrvalid.py  rnrvalid2.py  rnrvalid3_plugin.py  stiff_singenv.py  validitytest_env.py
adapteddlo_muj/utils/: argparse_utils.py  dlo_utils.py  ik_utils.py  mjc2_utils.py  mjc_utils.py  optimize_utils.py  plotter.py  real2sim_utils.py  smoothing_utils.py  transform_utils.py
customtwistapparatus/: Aclampring.STL  Bmovingclamp.STL  Cfixedclamp.STL  Dpin.STL  printprotractor.docx
scripts/: MUJOCO_LOG.TXT  build_rope_backends.sh  dlo_testdata.py  dlo_testdata_demo.py  plot_mbicombined.py  real2sim_paramiden.py  simvreal_dlomuj.py  speed_test.py  test_shape_w_arm.py
scripts/get_pos/: dlomuj_2Dpos.py  dlomuj_2Dpos_marktwisted.py  get_depth_many_azure.py
scripts/plugin_test/: MUJOCO_LOG.TXT  dlo_testdata_demo.py  fqs_problem.py  plot_mbicombined_demo.py  simvreal_dlomuj_demo.py  (+5 more)
wire_plugin/: README.md  add2source.md  how2use.md
wire_plugin/src/: CMakeLists.txt  addwire.cc  register.cc  wire_qst.cc  wire_qst.h  wire_qst.xml  wire_utils.cc
(+370 files in other folders)
